fixed visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@
 	margin: 50px 20% 50px 20%;
 	padding: 50px;
 	font-family: 'Raleway', sans-serif;
-	visibility: hidden;
+}
+
+.hide.container{
+        visibility: hidden;
 }
 
 .header {
